--- a/index.html
+++ b/index.html
@@ -23,4 +23,4 @@ A Matlab based program
 
 
 <h3><u>GIF File</u></h3>
-<img src="f&b_start=4_stop=7_delay=0.5_samv" style="padding-bottom:5%;width:auto;object-fit:contain;pointer-events:none;padding-left:10%"/>
+<img src="f&b_start=4_stop=7_delay=0.5_samv.gif" style="padding-bottom:5%;width:auto;object-fit:contain;pointer-events:none;padding-left:10%"/>
