--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ Video to GIF Converter
 
 
 
-A Matlab based program
+MATLAB based program
 
 
 
-<h2><a href="vdogif.mp4" target="_blank"> Process </a></h2>
+<h2><a href="video2GIF.mp4" target="_blank"> Process </a></h2>
 
 
 <h2><a href="https://1drv.ms/v/s!An-fPRbDe3SNcGwr3UIfBNNTSwY?e=4hfgdd" target="_blank">Video File </a></h2>
