--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ MATLAB based program
 
 
 
-<h2><a href="video2GIF.mp4" target="_blank"> Process </a></h2>
+<h2><a href="video2GIF.m4v" target="_blank"> Process </a></h2>
 
 
 <h2><a href="https://1drv.ms/v/s!An-fPRbDe3SNcGwr3UIfBNNTSwY?e=4hfgdd" target="_blank">Video File </a></h2>
